# sigmod_contest_2025

./: .gitignore  CMakeLists.txt  README.md  plans.json
include/: attribute.h  backup.h  common.h  csv_parser.h  plan.h  spc_executor.h  statement.h  table.h  table_entity.h
job/: 11a.sql  11b.sql  11c.sql  11d.sql  12b.sql  14c.sql  15c.sql  18b.sql  19a.sql  19b.sql  19c.sql  1a.sql  20c.sql  21a.sql  21b.sql  21c.sql  23a.sql  23c.sql  24a.sql  24b.sql  26a.sql  26b.sql  26c.sql  27a.sql  27b.sql  27c.sql  29a.sql  29c.sql  7c.sql  9a.sql
src/: build_table.cpp  csv_parser.cpp  execute.cpp  statement.cpp
tasks/: 1a.json  1b.json  1c.json  1d.json  2a.json  2b.json  2c.json  2d.json  3a.json  3b.json  3c.json  4a.json  4b.json  4c.json  5a.json  5b.json  5c.json
tests/: filter.cpp  join.cpp  parse_statement.cpp  read_csv.cpp  read_plan.cpp  read_sql.cpp  statement_tests.cpp  unit_tests.cpp
